Revision history for Dancer

{{$NEXT}}
    [ BUG FIXES ]
    * GH #794: Upload data was not kept for forwarded requests. 
        (reported by William Wolf)

    [ DOCUMENTATION ]
    * GH #938: fix doc typos in Dancer::Serializer. (Fabrice Gabolde)
    * GH #712: add all status codes known to Dancer to Dancer::HTTP. 
        (Yanick Champoux, reported by Brian J Miller)
    * Add warning that 'forward' doesn't preserver the session. (Alberto Simões)
    * GH #941: minor correction to code snippets in documentation. 
        (Grzegorz Rożniecki)

1.3116 03.07.2013

    [ ENHANCEMENTS ]
    * GH #767: forwarded_for_address() now looks for HTTP_X_FORWARDED_FOR if
        X_FORWARDED_FOR is not there. (Jakob Voss)
    * GH #936: Add file locking to file logger. (David Golden)
    * GH #937: Add details to tutorial. (Craig Treptow)

1.3115 09.06.2013 

    [ BUG FIXES ]
    * GH #605: pass'ed megasplat with no further routes cause 404, not 500.
        (vlyon)

    [ DOCUMENTATION ]
    * GH #934: Added example of HAProxy deployment. (Anton Gerasimov)

    [ MISC ]
    * Tests now require Test::TCP v1.30+ (previous version had too short a
        timeout and tests were failing). (Yanick Champoux)

1.3114 02.06.2013

    [ ENHANCEMENTS ]
    * GH #919: 'dancer' script exits with code 255 if application 
        name is invalid. (ppisar)
    * GH #871: now recognize HTTP_X_FORWARDED_PROTO. (mlbarrow)
    * GH #926: make messages from fatal warnings show up in the logs. 
        (Max Maischein)
    * GH #930: speed improvement. (ichesnokov)
    * GH #859: strip illegal characters from cookie name. (Colin Keith)
    * GH #924: non-'/' apps behind proxies now possible using 'request-base'
        header. (Mikolaj Kucharski)

    [ BUG FIXES ]
    * GH #724: app.pl obeys --confdir. (Yanick Champoux)
    * GH #927: logging format using 'h' now play nicely if no header present.
        (ironcamel)

    [ DOCUMENTATION ]