@@ -42,6 +42,7 @@ A huge thank you to all of them!
     chromatic <chromatic@wgz.org>
     Colin Keith <colinmkeith@gmail.com>
     Craig Treptow <craig.treptow@gmail.com>
+    Daniel Perett <daniel.perett@(none)>
     Danijel Tasov <dt@korn.shell.la>
     Dave Doyle <dave.s.doyle@gmail.com>
     David Moreno <david@axiombox.com>
